--- a/src/components/Login/Register/Register.css
+++ b/src/components/Login/Register/Register.css
@@ -2,6 +2,9 @@
     background-color: #03045e;
     color: white;
 }
+.btn-regular:hover{
+    background-color: #8385ec;
+}
 h1{
     color: #03045e;
 }
